# GIF-3004-diaw-anoh

./: README.md
TestClient/: client  client.c
laboratoire5/client/: client  client.c
laboratoire5/pc_clavier_module/: .peripherique.ko.cmd  .peripherique.mod.o.cmd  .peripherique.o.cmd  Makefile  modules.order  peripherique.c  peripherique.ko
laboratoire5/pc_clavier_module/.tmp_versions/: peripherique.mod
laboratoire5/pi_clavier_module/: .setr_driver_irq.ko.cmd  .setr_driver_irq.mod.o.cmd  .setr_driver_irq.o.cmd  .setr_driver_polling.ko.cmd  .setr_driver_polling.mod.o.cmd  .setr_driver_polling.o.cmd  modules.order  setr_driver_irq.c  setr_driver_irq.ko  setr_driver_irq.mod.c  setr_driver_polling.c  setr_driver_polling.ko  setr_driver_polling.mod.c  syncFiles.sh
laboratoire5/pi_clavier_module/.tmp_versions/: setr_driver_irq.mod  setr_driver_polling.mod
laboratoire5/serveur/: CMakeLists.txt  serveur.c  syncAndStartGDB.sh
